--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,20 @@
 /scipy/
 /image/
 /testMeasure2/
-tests.spec
-modified_img.jpg
-listDistances*.txt
-distances.txt
+/tests.spec
+/modified_img.jpg
+/listDistances*.txt
+/distances.txt
+/test.py
+/testing.py
+/testPrism.py
+/testNewProgram.py
+/parallelPrism.py
+/measureForResultEM.py
+/main.py
+/FractalAnalysisClass.py
+/application.py
+/analysis_labeling.py
+/analysis_algorithm_data.py
+/analys_data.py
+/1-11.tif
